Remade setup - addad some content

--- a/ProjectWS/02 - Sections/05-experiments.tex
+++ b/ProjectWS/02 - Sections/05-experiments.tex
@@ -1,11 +1,4 @@
-\chapter{Analyses}
-
-\section{Bevidste fra- og tilvalg}
-
-Valg af kommunikationstype mellem Ard mega og Ard nano
-Hvorfor deler vi signalbehandling ud på Ard Mega og Nano?
-
-\chapter{Tests}
+\chapter{Experiments}
 
 \section{Inductive sensors}
 
@@ -54,7 +47,7 @@ Power supply:
 \subsubsection{Conclusion}
 
 
-\subsubsection{Follow up tests}
+\subsubsection{Follow-up tests}
 
 Current at various voltages
 Sensitivity at various voltages
