--- a/ProjectWS/02 - Sections/08-specifications.tex
+++ b/ProjectWS/02 - Sections/08-specifications.tex
@@ -1,2 +1,9 @@
 \chapter{Specifications}
 
+\section{Bevidste fra- og tilvalg}
+
+Valg af kommunikationstype mellem Ard mega og Ard nano
+Hvorfor deler vi signalbehandling ud på Ard Mega og Nano? (Se test af runtime) [Højest mulige opløsning i tid - fører til højeste sikre hastighed på robot]
+Hvorfor bruger vi Ard mega i stedet for Rasp Pi?
+Hvorfor bruger vi NO censorer?
+
