--- a/ProjectWS/appendices.tex
+++ b/ProjectWS/appendices.tex
@@ -1,4 +1,10 @@
 \appendix
 
+\hypertarget{AppA}{\chapter{Arduino read/write experiment}}
 
-\hypertarget{AppA}{\chapter{Test}}
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=18cm]{ProjectWS/00 - Images/ArduinoReadWriteExperiment.JPG}
+\caption{Source: \cite{ArdReadWriteExp}\\ Not tested.}
+\end{center}
+\end{figure}
