--- a/ProjectWS/main.tex
+++ b/ProjectWS/main.tex
@@ -31,14 +31,11 @@
 %% INPUT HERUNDER
 \listoftodos
 \input{ProjectWS/02 - Sections/01-introduction}
-\input{ProjectWS/02 - Sections/02-initialProblemDefinition}
-\input{ProjectWS/02 - Sections/03-analyses}
-\input{ProjectWS/02 - Sections/04-finalProblemDefinition}
-\input{ProjectWS/02 - Sections/05-ethicsAndLegislation}
-\input{ProjectWS/02 - Sections/06-description}
-\input{ProjectWS/02 - Sections/07-limitations}
+\input{ProjectWS/02 - Sections/02-hardware}
+\input{ProjectWS/02 - Sections/03-software}
+\input{ProjectWS/02 - Sections/04-tests}
+\input{ProjectWS/02 - Sections/05-experiments}
 \input{ProjectWS/02 - Sections/08-specifications}
-\input{ProjectWS/02 - Sections/09-discussion}
 \input{ProjectWS/02 - Sections/10-conklusion}
 %\input{ProjectWS/02 - Sections/11-glossaryOfTermsAndAbreviations}
 %%%%%
