--- a/ProjectWS/referencer.bib
+++ b/ProjectWS/referencer.bib
@@ -65,3 +65,10 @@
     year = {},
     note = {(Accessed on 04/11/2016)}
 }
+
+@online{ArdReadWriteExp,
+  author = {Golam Mostafa},
+  title  = {How many clock cycles does digitalRead/Write take?},
+  url    = {https://forum.arduino.cc/index.php?topic=486249.0},
+  urldate = {2020-11-09},
+}
